.freecode.log
[1772387048] $ apply_patch
patch failed: error: patch fragment without header at line 2: @@ -1,12 +1,11 @@

[1772387059] $ write_file src/lib.rs
wrote src/lib.rs (310 bytes)

[1772387060] $ cargo test
Compiling freecode v0.8.0 (/home/kelly/Documents/projects/freecode)
error[E0432]: unresolved imports `crate::Cli`, `crate::Commands`
 --> src/lib.rs:3:17
  |
3 |     use crate::{Cli, Commands};
  |                 ^^^  ^^^^^^^^ no `Commands` in the root
  |                 |
  |                 no `Cli` in the root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `freecode` (lib test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...

[1772387068] $ cargo test
Compiling freecode v0.8.0 (/home/kelly/Documents/projects/freecode)
error[E0432]: unresolved imports `crate::Cli`, `crate::Commands`
 --> src/lib.rs:3:17
  |
3 |     use crate::{Cli, Commands};
  |                 ^^^  ^^^^^^^^ no `Commands` in the root
  |                 |
  |                 no `Cli` in the root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `freecode` (lib test) due to 1 previous error

[1772387070] $ ls -la src/
total 36
drwxrwxr-x 2 kelly kelly  4096 Mar  2 01:43 .
drwxrwxr-x 8 kelly kelly  4096 Mar  2 01:44 ..
-rw-rw-r-- 1 kelly kelly   310 Mar  2 01:44 lib.rs
-rw-rw-r-- 1 kelly kelly 14583 Mar  2 01:33 llm.rs
-rw-rw-r-- 1 kelly kelly  2258 Mar  2 01:22 main.rs
-rw-rw-r-- 1 kelly kelly  2084 Feb 25 00:44 tools.rs

[1772387071] $ cargo test
Compiling freecode v0.8.0 (/home/kelly/Documents/projects/freecode)
error[E0432]: unresolved imports `crate::Cli`, `crate::Commands`
 --> src/lib.rs:3:17
  |
3 |     use crate::{Cli, Commands};
  |                 ^^^  ^^^^^^^^ no `Commands` in the root
  |                 |
  |                 no `Cli` in the root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `freecode` (lib test) due to 1 previous error

[1772387081] $ apply_patch
patch failed: error: patch failed: src/lib.rs:1
error: src/lib.rs: patch does not apply

